build: config application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# Application
 spring.application.name=Use-Good-Trading-System
+
+# Server
+server.port=8080
+
+# Data source
+spring.datasource.url=jdbc:postgresql://localhost:5432/ugts_db
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
