feat: add creat a selling post feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,8 @@ spring.mail.username=quangtahe161550@fpt.edu.vn
 spring.mail.password=htzq rzuz vnid gsrw
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Google Cloud Storage
+spring.cloud.gcp.storage.bucket=ulhts
+spring.cloud.gcp.project-id=driven-pillar-423917-k6
+spring.cloud.gcp.credentials.location=classpath:driven-pillar-423917-k6-98a7b85af139.json
