--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
 			<version>1.19.8</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-storage</artifactId>
+			<version>2.38.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
