ref: refactor upload product image using AWS S3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,17 @@ spring.mail.password=htzq rzuz vnid gsrw
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# Google Cloud Storage
-spring.cloud.gcp.storage.bucket=ulhts
-spring.cloud.gcp.project-id=driven-pillar-423917-k6
-spring.cloud.gcp.credentials.location=classpath:driven-pillar-423917-k6-98a7b85af139.json
+# AWS S3
+aws.s3.bucket-name=${AWS_S3_BUCKET_NAME}
+aws.s3.region=${AWS_REGION}
+aws.accessKeyId=${AWS_ACCESS_KEY_ID}
+aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY}
+
+# Multiparts Properties
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=500KB
+spring.servlet.multipart.max-request-size=10MB
+
+
+
+
