build(auth): add OAuth2 Client dependency and config properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,8 @@ spring.mail.username=quangtahe161550@fpt.edu.vn
 spring.mail.password=htzq rzuz vnid gsrw
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Oauth2 Google
+spring.security.oauth2.client.registration.google.client-id={GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret={GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
