ref: refactor create post feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,10 +27,10 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # AWS S3
-aws.s3.bucket-name=${AWS_S3_BUCKET_NAME}
-aws.s3.region=${AWS_REGION}
-aws.accessKeyId=${AWS_ACCESS_KEY_ID}
-aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY}
+aws.s3.bucket-name=ugts
+aws.s3.region=AP_SOUTHEAST_1
+aws.accessKeyId=
+aws.secretAccessKey=
 
 # Multiparts Properties
 spring.servlet.multipart.enabled=true
