ref: refactor using S3 to GCP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,11 +26,9 @@ spring.mail.password=htzq rzuz vnid gsrw
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# AWS S3
-aws.s3.bucket-name=ugts
-aws.s3.region=AP_SOUTHEAST_1
-aws.accessKeyId=
-aws.secretAccessKey=
+# Google Cloud Storage
+spring.cloud.gcp.storage.enabled=true
+google.cloud.storage.bucket=capstone-luxury-handbags
 
 # Multiparts Properties
 spring.servlet.multipart.enabled=true
