ref: refactor using S3 to GCP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,16 @@ spring.mail.username=quangtahe161550@fpt.edu.vn
 spring.mail.password=htzq rzuz vnid gsrw
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Google Cloud Storage
+spring.cloud.gcp.storage.enabled=true
+google.cloud.storage.bucket=capstone-luxury-handbags
+
+# Multiparts Properties
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=500KB
+spring.servlet.multipart.max-request-size=10MB
+
+
+
+
