--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,21 @@
 			<artifactId>google-cloud-storage</artifactId>
 			<version>2.38.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>spring-cloud-gcp-starter-storage</artifactId>
+			<version>5.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>spring-cloud-gcp-dependencies</artifactId>
+			<version>5.3.0</version>
+			<type>pom</type>
+			<scope>import</scope>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-storage</artifactId>
+			<version>2.38.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
