ref(create-post): update logic for createPost method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ google.cloud.storage.bucket=capstone-luxury-handbags
 
 # Multiparts Properties
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=500KB
+spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
 
 
