--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 			<artifactId>spring-cloud-gcp-dependencies</artifactId>
 			<version>5.3.0</version>
 			<type>pom</type>
-			<scope>import</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
