feat(search): adding search post by title using keyword and filter by status, change LocaDate to Date in User entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,5 +36,13 @@ spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
 
 
+# Elasticsearch
+spring.elasticsearch.uris=http://localhost:9200
+#spring.data.elasticsearch.repositories.enabled=true
+#spring.data.elasticsearch.cluster-name=elasticsearch
+#spring.data.elasticsearch.cluster-nodes=
+spring.main.allow-bean-definition-overriding=true
+spring.jackson.default-property-inclusion=non_null
+
 
 
