--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 services:
   postgres:
-     container_name: postgres
-     image: postgres
-     restart: unless-stopped
-     ports:
-       - "5432:5432"
-     environment:
-       - POSTGRES_DB=postgres
-       - POSTGRES_USER=postgres
-       - POSTGRES_PASSWORD=admin
-     volumes:
-       - postgres:/data/postgres
-     networks:
-       - postgres
-# open localhost:5050/browser/ to view, enter host name is postgres
+    container_name: postgres
+    image: postgres
+    restart: unless-stopped
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=admin
+    volumes:
+      - postgres:/data/postgres
+    networks:
+      - postgres
+  # open localhost:5050/browser/ to view, enter host name is postgres
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4
@@ -21,16 +21,81 @@ services:
     ports:
       - "5050:80"
     environment:
-       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgamin4@gmail.com}
-       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
-       PGADMIN_CONFIG_SERVER_MODE: 'False'
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgamin4@gmail.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
     volumes:
-       - pgadmin:/var/lib/pgadmin
+      - pgadmin:/var/lib/pgadmin
     networks:
-       - postgres
+      - postgres
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.14.0
+    container_name: elasticsearch
+    volumes:
+      - es-data:/usr/share/elasticsearch/data
+    networks:
+      - es-net
+    ports:
+      - "9200:9200"
+    environment:
+#      - node.name=elasticsearch
+#      - cluster.name=datasearch
+#      - node.master=true
+      - discovery.type=single-node
+#      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - xpack.security.enabled=false
+      - xpack.security.http.ssl.enabled=false
+      - xpack.security.transport.ssl.enabled=false
+      - xpack.security.enrollment.enabled=false
+#      - "cluster.initial_master_nodes=master-node"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "curl -s http://localhost:9200 | grep -q 'missing authentication credentials'",
+        ]
+      interval: 10s
+      timeout: 10s
+      retries: 120
+  kibana:
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+    image: docker.elastic.co/kibana/kibana:8.14.0
+    container_name: kibana
+    networks:
+      - es-net
+    volumes:
+      - kibanadata:/usr/share/kibana/data
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - "5601:5601"
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "curl -s -I http://localhost:5601 | grep -q 'HTTP/1.1 302 Found'",
+        ]
+      interval: 10s
+      timeout: 10s
+      retries: 120
+
 networks:
   postgres:
+    driver: bridge
+  es-net:
     driver: bridge
 volumes:
   postgres:
   pgadmin:
+  es-data:
+    driver: local
+  kibanadata:
+    driver: local
