delete(elastic):delete elasticsearch usage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,12 +37,12 @@ spring.servlet.multipart.max-request-size=10MB
 
 
 # Elasticsearch
-spring.elasticsearch.uris=http://localhost:9200
+#spring.elasticsearch.uris=http://localhost:9200
 #spring.data.elasticsearch.repositories.enabled=true
 #spring.data.elasticsearch.cluster-name=elasticsearch
 #spring.data.elasticsearch.cluster-nodes=
-spring.main.allow-bean-definition-overriding=true
-spring.jackson.default-property-inclusion=non_null
+#spring.main.allow-bean-definition-overriding=true
+#spring.jackson.default-property-inclusion=non_null
 
 
 
