--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 google-credentials.json
+firebase-service-account.json
 ### STS ###
 .apt_generated
 .classpath
