--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,12 +37,26 @@ spring.servlet.multipart.max-request-size=10MB
 
 
 # Elasticsearch
-spring.elasticsearch.uris=http://localhost:9200
+#spring.elasticsearch.uris=http://localhost:9200
 #spring.data.elasticsearch.repositories.enabled=true
 #spring.data.elasticsearch.cluster-name=elasticsearch
 #spring.data.elasticsearch.cluster-nodes=
-spring.main.allow-bean-definition-overriding=true
-spring.jackson.default-property-inclusion=non_null
+#spring.main.allow-bean-definition-overriding=true
+#spring.jackson.default-property-inclusion=non_null
+
+#Kafka
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=notification-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 
 
