update: adding consumer and producer when comment on post

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,7 +110,8 @@ services:
       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-
+    volumes:
+      - kafka-data:/bitnami/kafka
 networks:
   postgres:
     driver: bridge
@@ -122,4 +123,6 @@ volumes:
   es-data:
     driver: local
   kibana-data:
+    driver: local
+  kafka-data:
     driver: local
