update: adding start of rating

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,12 +48,12 @@ spring.servlet.multipart.max-request-size=20MB
 #spring.security.oauth2.client.registration.google.client-id = *clientId*
 #spring.security.oauth2.client.registration.google.client-secret= = *secret*
 
-spring.cloud.gcp.firestore.project-id=capstone-9dd16
-spring.cloud.gcp.firestore.enabled=true
-spring.cloud.gcp.credentials.location=classpath:firebase-service-account.json
-spring.cloud.gcp.security.firebase.enabled=false
-spring.cloud.gcp.firestore.credentials.location=classpath:firebase-service-account.json
-
+#spring.cloud.gcp.firestore.project-id=capstone-9dd16
+#spring.cloud.gcp.firestore.enabled=true
+#spring.cloud.gcp.credentials.location=classpath:firebase-service-account.json
+#spring.cloud.gcp.security.firebase.enabled=false
+#spring.cloud.gcp.firestore.credentials.location=classpath:firebase-service-account.json
+#
 
 #spring.kafka.bootstrap-servers=localhost:9094
 #spring.kafka.consumer.bootstrap-servers=localhost:9094
