--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,8 +33,8 @@ google.cloud.storage.bucket=capstone-luxury-handbags
 
 # Multiparts Properties
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=20MB
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=200MB
 
 
 # Elasticsearch
@@ -48,11 +48,11 @@ spring.servlet.multipart.max-request-size=20MB
 #spring.security.oauth2.client.registration.google.client-id = *clientId*
 #spring.security.oauth2.client.registration.google.client-secret= = *secret*
 
-spring.cloud.gcp.firestore.project-id=capstone-9dd16
-spring.cloud.gcp.firestore.enabled=true
-spring.cloud.gcp.credentials.location=classpath:firebase-service-account.json
-spring.cloud.gcp.security.firebase.enabled=false
-spring.cloud.gcp.firestore.credentials.location=classpath:firebase-service-account.json
+#spring.cloud.gcp.firestore.project-id=capstone-9dd16
+#spring.cloud.gcp.firestore.enabled=true
+#spring.cloud.gcp.credentials.location=classpath:firebase-service-account.json
+#spring.cloud.gcp.security.firebase.enabled=false
+#spring.cloud.gcp.firestore.credentials.location=classpath:firebase-service-account.json
 
 
 #spring.kafka.bootstrap-servers=localhost:9094
