--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,17 @@ services:
     networks:
       - postgres
 
+  redis:
+    container_name: redis
+    image: docker.io/redis:7.4.0
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./redis-data:/data
+#    networks:
+#      - redis
+
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.14.0
     container_name: elasticsearch
@@ -126,3 +137,5 @@ volumes:
     driver: local
   kafka-data:
     driver: local
+  redis:
+    driver: bridge
