--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,8 +37,8 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=200MB
 
 #Redis
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+#spring.data.redis.host=localhost
+#spring.data.redis.port=6379
 
 # Elasticsearch
 #spring.elasticsearch.uris=http://localhost:9200
