--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.application.name=Used-Luxury-Bags-Trading-System
 server.port=8080
 
 # Data source
-spring.datasource.url=${DBMS_CONNECTION:jdbc:postgresql://localhost:5432/ugts_db}
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=${DBMS_USERNAME:postgres}
-spring.datasource.password=${DBMS_PASSWORD:admin}
+spring.datasource.url=${DBMS_CONNECTION:jdbc:mysql://172.21.0.2:3306/ugts_db}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=${DBMS_USERNAME:root}
+spring.datasource.password=${DBMS_PASSWORD:123456}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
