update: adding auto complete data to store in db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=Use-Good-Trading-System
 server.port=8080
 
 # Data source
-spring.datasource.url=jdbc:postgresql://34.171.188.230:5432/ugts_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/ugts_db
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=admin
