--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,64 +39,64 @@ services:
 #      - ./redis-data:/data
 #    networks:
 #      - redis
-
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.14.0
-    container_name: elasticsearch
-    volumes:
-      - es-data:/usr/share/elasticsearch/data
-    networks:
-      - es-net
-    ports:
-      - "9200:9200"
-    environment:
-#      - node.name=elasticsearch
-#      - cluster.name=datasearch
-#      - node.master=true
-      - discovery.type=single-node
-#      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - xpack.security.enabled=false
-      - xpack.security.http.ssl.enabled=false
-      - xpack.security.transport.ssl.enabled=false
-      - xpack.security.enrollment.enabled=false
-#      - "cluster.initial_master_nodes=master-node"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "curl -s http://localhost:9200 | grep -q 'missing authentication credentials'",
-        ]
-      interval: 10s
-      timeout: 10s
-      retries: 120
-  kibana:
-    depends_on:
-      elasticsearch:
-        condition: service_healthy
-    image: docker.elastic.co/kibana/kibana:8.14.0
-    container_name: kibana
-    networks:
-      - es-net
-    volumes:
-      - kibana-data:/usr/share/kibana/data
-    environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-    ports:
-      - "5601:5601"
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "curl -s -I http://localhost:5601 | grep -q 'HTTP/1.1 302 Found'",
-        ]
-      interval: 10s
-      timeout: 10s
-      retries: 120
+#
+#  elasticsearch:
+#    image: docker.elastic.co/elasticsearch/elasticsearch:8.14.0
+#    container_name: elasticsearch
+#    volumes:
+#      - es-data:/usr/share/elasticsearch/data
+#    networks:
+#      - es-net
+#    ports:
+#      - "9200:9200"
+#    environment:
+##      - node.name=elasticsearch
+##      - cluster.name=datasearch
+##      - node.master=true
+#      - discovery.type=single-node
+##      - bootstrap.memory_lock=true
+#      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+#      - xpack.security.enabled=false
+#      - xpack.security.http.ssl.enabled=false
+#      - xpack.security.transport.ssl.enabled=false
+#      - xpack.security.enrollment.enabled=false
+##      - "cluster.initial_master_nodes=master-node"
+#    ulimits:
+#      memlock:
+#        soft: -1
+#        hard: -1
+#    healthcheck:
+#      test:
+#        [
+#          "CMD-SHELL",
+#          "curl -s http://localhost:9200 | grep -q 'missing authentication credentials'",
+#        ]
+#      interval: 10s
+#      timeout: 10s
+#      retries: 120
+#  kibana:
+#    depends_on:
+#      elasticsearch:
+#        condition: service_healthy
+#    image: docker.elastic.co/kibana/kibana:8.14.0
+#    container_name: kibana
+#    networks:
+#      - es-net
+#    volumes:
+#      - kibana-data:/usr/share/kibana/data
+#    environment:
+#      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+#    ports:
+#      - "5601:5601"
+#    healthcheck:
+#      test:
+#        [
+#          "CMD-SHELL",
+#          "curl -s -I http://localhost:5601 | grep -q 'HTTP/1.1 302 Found'",
+#        ]
+#      interval: 10s
+#      timeout: 10s
+#      retries: 120
 #  zookeeper:
 #    image: confluentinc/cp-zookeeper:latest
 #    container_name: zookeeper
@@ -105,24 +105,24 @@ services:
 #      ZOOKEEPER_TICK_TIME: 2000
 #    ports:
 #      - 22181:2181
-  kafka:
-    image: 'bitnami/kafka:3.7.0'
-    container_name: kafka
-#    depends_on:
-#      - zookeeper
-    hostname: kafka
-    ports:
-      - '9094:9094'
-    environment:
-      - KAFKA_CFG_NODE_ID=0
-      - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-    volumes:
-      - kafka-data:/bitnami/kafka
+#  kafka:
+#    image: 'bitnami/kafka:3.7.0'
+#    container_name: kafka
+##    depends_on:
+##      - zookeeper
+#    hostname: kafka
+#    ports:
+#      - '9094:9094'
+#    environment:
+#      - KAFKA_CFG_NODE_ID=0
+#      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+#      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+#      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+#      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+#      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
+#      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+#    volumes:
+#      - kafka-data:/bitnami/kafka
 networks:
   postgres:
     driver: bridge
